[package]
name = "recon"
version = "0.7.2"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
